<resources>
    <string name="app_name">Tier Chaser</string>
    <string name="subtitle">The Guide of Antique Lovers</string>
    <string name="description">Find antique objects which are hard to find in a flea market using a simple picture</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->


    //ShowObjectActivity
    <string name="page_object_title">A découvrir</string>
    <string name="page_object_last_object_section">Les derniers objets</string>

    //CollectionActivity
    <string name="page_collection_title">Ma collection</string>

    //PublishActivity
    <string name="page_publish_title2">Ajout d\'un objet</string>
    <string name="page_publish_no_photo">Aucune photo ajoutée</string>
    <string name="page_publish_upload_button1">Importer une photo</string>
    <string name="page_publish_upload_button2">Prendre une photo</string>
    <string name="preview">preview</string>
    <string name="page_publish_object_name">Nom de l\'objet</string>
    <string name="page_publish_object_description">Description de l\'objet</string>
    <string name="page_publish_object_price">Prix de l\'objet</string>
    <string name="page_publish_button">Publier</string>

    //FenetrePopUp
    <string name="pop_up_name_object">Nom de l\'objet</string>
    <string name="pop_up_description_title">Description</string>
    <string name="pop_up_description_subtitle">Petite description</string>
    <string name="pop_up_price_title">Prix</string>
    <string name="pop_up_price_subtitle">Petit prix</string>

    //Objet customisé
    <string name="item_name_object">@string/page_publish_object_name</string>
    <string name="item_description_object">@string/page_publish_object_description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    // Authentification

    <string name="validForm">The form is valid</string>
    <string name="invalidForm">The form is invalid</string>
    <string name="youLogIn">You sign in successfully !</string>

    // Register

    <string name="createAccount">Créer un compte</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="email">Email</string>
    <string name="password">Mot de Passe</string>
    <string name="validateBtn">Valider</string>
    <string name="alreadyBtn">J\'ai déjà un compte</string>

    // Login

    <string name="connect">Se connecter</string>
    <string name="loginTitle">S\'identifier</string>
    <string name="noAccountBtn">Créer un compte</string>
    <string name="forgotPassword">Mot de passe oublié ?</string>

    // Verification

    <string name="verificationTitle">Vérifier votre compte</string>
    <string name="verify">Envoyer l\'email de vérification</string>
    <string name="backToLogin">Se connecter</string>

    // Home
    <string name="logoutBtn">Se déconnecter</string>
    <string name="deleteUser">Supprimer le compte</string>

    // Profil
    <string name="nbPublication">Publications</string>
    <string name="followers">Abonnés</string>
    <string name="following">Abonnements</string>
    <string name="editProfil">Editer le profil</string>

    // Edit Profil
    <string name="editPhoto">Changer votre photo de profil ?</string>
    <string name="editUserName">Changer de nom d\'utilisateur ?</string>
    <string name="editBio">Changer de bio ?</string>
    <string name="newUsername">Entrer un nouveau nom d\'utilisateur</string>
    <string name="newBio">Entrer une nouvelle bio</string>
    <string name="saveBtn">Enregistrer</string>


    //FilActuActivity
    <string name="pseudo_utilisateur">Pseudo utilisateur</string>
    <string name="favoris">Vos favoris</string>
    <string name="title_activity_edit_profil">EditProfilActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logo">logo</string>
    <string name="title_fil_actu">Votre fil d\'actualité</string>
    <string name="img">img</string>


</resources>