<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/blue_700">

        <ImageView
            android:id="@+id/preview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/preview"
            android:paddingVertical="10dp" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_700"
            android:gravity="center"
            android:text="@string/page_publish_no_photo"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/takePic"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@color/blue_700"
            android:backgroundTint="@color/blue_700"
            android:text="@string/page_publish_upload_button2"
            android:textColor="#000000" />

        <Button
            android:id="@+id/importPic"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@color/blue_700"
            android:backgroundTint="@color/blue_700"
            android:text="@string/page_publish_upload_button1"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>