<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profil"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/letftPicture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:civ_border_width="2dp"
        android:src="@drawable/account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nbPublication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/publication"
        app:layout_constraintStart_toStartOf="@+id/publication"
        app:layout_constraintTop_toTopOf="@+id/nbFollowers" />

    <TextView
        android:id="@+id/publication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/nbPublication"
        app:layout_constraintEnd_toStartOf="@+id/followers"
        app:layout_constraintTop_toTopOf="@+id/followers" />

    <TextView
        android:id="@+id/nbFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/followers"
        app:layout_constraintEnd_toEndOf="@+id/followers"
        app:layout_constraintStart_toStartOf="@+id/followers" />

    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/followers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/letftPicture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nbFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/following"
        app:layout_constraintStart_toStartOf="@+id/following"
        app:layout_constraintTop_toTopOf="@+id/nbFollowers" />

    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/following"
        app:layout_constraintStart_toEndOf="@+id/followers"
        app:layout_constraintTop_toTopOf="@+id/followers" />

    <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/letftPicture"
        app:layout_constraintTop_toBottomOf="@+id/letftPicture" />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/editProfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bio"
        app:layout_constraintTop_toBottomOf="@+id/bio" />

    <TextView
        android:id="@+id/bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

</androidx.constraintlayout.widget.ConstraintLayout>